--- a/quectel.conf
+++ b/quectel.conf
@@ -77,12 +77,9 @@ dtmf=relax			; control of incoming DTMF detection, possible values:
 
 ; quectel required settings
 [quectel0]
-audio=/dev/ttyUSB1		         ; tty port for Audio, set as ttyUSB4 for Simcom if no other dev present
-data=/dev/ttyUSB2		         ; tty port for AT commands; 		no default value
-;quec_uac=1                              ; Uncomment line if using UAC mode
-;alsadev=hw:CARD=Android,DEV=0           ; Uncomment if using UAC, set device name or index as reqd
-;imsi=                                   ; Fill in value, uncomment and comment out everything else - Not for UAC
-;imei=                                   ; Fill in value, uncomment and comment out everything else - Not for UAC
-
-
-
+audio=/dev/ttyUSB1			; tty port for Audio, set as ttyUSB4 for Simcom if no other dev present
+data=/dev/ttyUSB2			; tty port for AT commands; 		no default value
+;uac=yes					; Uncomment line if using UAC mode
+;alsadev=hw:Android			; Uncomment if using UAC, set device name or index as reqd
+;imsi=						; Fill in value, uncomment and comment out everything else - Not for UAC
+;imei=						; Fill in value, uncomment and comment out everything else - Not for UAC
