--- a/Makefile.in
+++ b/Makefile.in
@@ -1,8 +1,8 @@
 PROJM =  chan_quectel.so
 PROJS =  chan_quectels.so
 
-chan_quectelm_so_OBJS =  app.o at_command.o at_parse.o at_queue.o at_read.o at_response.o \
-	chan_quectel.o channel.o char_conv.o cli.o helpers.o manager.o \
+chan_quectelm_so_OBJS =  at_command.o at_parse.o at_queue.o at_read.o at_response.o \
+	chan_quectel.o channel.o char_conv.o cli.o helpers.o \
 	memmem.o ringbuffer.o cpvt.o dc_config.o pdu.o mixbuffer.o pdiscovery.o error.o smsdb.o
 
 chan_quectels_so_OBJS = single.o
@@ -12,9 +12,9 @@ gen_OBJS = test/gen.o char_conv.o pdu.o error.o
 parse_OBJS = test/parse.o at_parse.o char_conv.o pdu.o error.o
 discovery_OBJS = tools/discovery.o tools/tty.o
 
-SOURCES = app.c at_command.c at_parse.c at_queue.c at_read.c at_response.c \
+SOURCES = at_command.c at_parse.c at_queue.c at_read.c at_response.c \
 	chan_quectel.c channel.c char_conv.c cli.c cpvt.c dc_config.c helpers.c \
-	manager.c memmem.c ringbuffer.c single.c pdu.c mixbuffer.c pdiscovery.c \
+	memmem.c ringbuffer.c single.c pdu.c mixbuffer.c pdiscovery.c \
 	error.c smsdb.c
 
 test_SOURCES = test/test1.c test/parse.c test/gen.c
