--- a/uac/quectel.conf
+++ b/uac/quectel.conf
@@ -41,6 +41,7 @@ csmsttl=600
 ; now you can set here any not required device settings as template
 ;   sure you can overwrite in any [device] section this default values
 
+multiparty=no
 context=incoming-mobile		; context for incoming calls
 group=0				; calling group
 rxgain=0			; increase the incoming volume; may be negative
@@ -56,9 +57,6 @@ disablesms=no			; disable of SMS reading from device when received
 				;  default = no
 
 language=en			; set channel default language
-mindtmfgap=45			; minimal interval from end of previews DTMF from begining of next in ms
-mindtmfduration=80		; minimal DTMF tone duration in ms
-mindtmfinterval=200		; minimal interval between ends of DTMF of same digits in ms
 
 callwaiting=auto		; if 'yes' allow incoming calls waiting; by default use network settings
 				; if 'no' waiting calls just ignored
@@ -68,13 +66,7 @@ initstate=start			; specified initial state of device, must be one of 'stop' 'st
 				;   'remove' same as 'disable=yes'
 
 ;exten=70		; exten for start incoming calls, only in case of Subscriber Number not available!, also set to CALLERID(ndid)
-
-dtmf=relax			; control of incoming DTMF detection, possible values:
-				;   off	   - off DTMF tones detection, voice data passed to asterisk unaltered
-				;              use this value for gateways or if not use DTMF for AVR or inside dialplan
-				;   inband - do DTMF tones detection
-				;   relax  - like inband but with relaxdtmf option
-				;  default is 'relax' by compatibility reason
+dtmf=no
 
 ; quectel required settings
 [quectel0]
