--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,3 @@
 .vscode/
 *.swp
-
-*.o
-*.o.d
-
-/chan_quectel.so
-
-/Makefile
-/aclocal.m4
-/autom4te.cache
-/compile
-/config.guess
-/config.h
-/config.log
-/config.status
-/config.sub
-/configure
-/install-sh
-/missing
-/stamp-h
-/stamp-h1
+build/
