Add 'moh' configuration switch
Specify hold/unhold action:
* yes - play/stop MOH.
* no - disable/enable uplink voice using AT+CMUT command.

--- a/quectel.conf
+++ b/quectel.conf
@@ -61,6 +61,8 @@ callwaiting=auto		; if 'yes' allow incoming calls waiting; by default use networ
 				; if 'no' waiting calls just ignored
 disable=no			; OBSOLETED by initstate: if 'yes' no load this device and just ignore this section
 
+;moh=yes			; Hold/Unhold action: MOH or Mute
+
 initstate=start			; specified initial state of device, must be one of 'stop' 'start' 'remote'
 				;   'remove' same as 'disable=yes'
 
