Add query_time configuration switch

--- a/etc/quectel.conf
+++ b/etc/quectel.conf
@@ -41,14 +41,13 @@ csmsttl=600
 ; now you can set here any not required device settings as template
 ;   sure you can overwrite in any [device] section this default values
 
-multiparty=no
+;multiparty=no
 context=incoming-mobile		; context for incoming calls
 group=0				; calling group
 rxgain=0			; increase the incoming volume; may be negative
 txgain=0			; increase the outgoint volume; may be negative
 autodeletesms=yes		; auto delete incoming sms
 resetquectel=yes			; reset quectel during initialization with ATZ command
-u2diag=-1			; set ^U2DIAG parameter on device (0 = disable everything except modem function) ; -1 not use ^U2DIAG command
 usecallingpres=yes		; use the caller ID presentation or not
 callingpres=allowed_passed_screen ; set caller ID presentation		by default use default network settings
 disablesms=no			; disable of SMS reading from device when received
@@ -66,7 +65,8 @@ initstate=start			; specified initial state of device, must be one of 'stop' 'st
 				;   'remove' same as 'disable=yes'
 
 ;exten=70		; exten for start incoming calls, only in case of Subscriber Number not available!, also set to CALLERID(ndid)
-dtmf=no
+;dtmf=no
+;query_time=no
 
 ; quectel required settings
 [quectel0]
