--- a/quectel.conf
+++ b/quectel.conf
@@ -69,6 +69,7 @@ initstate=start			; specified initial state of device, must be one of 'stop' 'st
 ;exten=70		; exten for start incoming calls, only in case of Subscriber Number not available!, also set to CALLERID(ndid)
 
 ;dtmf=no
+;query_time=no
 
 ; quectel required settings
 [quectel0]
