Reimplement txgain and rxgain options
TX/RX gain is now performed by module itself.
This driver just sends proper AT commands to module.

--- a/etc/quectel.conf
+++ b/etc/quectel.conf
@@ -44,8 +44,8 @@ csmsttl=600
 ;multiparty=no
 context=incoming-mobile		; context for incoming calls
 group=0				; calling group
-rxgain=0			; increase the incoming volume; may be negative
-txgain=0			; increase the outgoint volume; may be negative
+;rxgain=-1			; RX gain, range: 0–65535, -1 - use module setting
+;txgain=-1			; TX gain, range: 0–65535, -1 - use module setting
 autodeletesms=yes		; auto delete incoming sms
 resetquectel=yes			; reset quectel during initialization with ATZ command
 usecallingpres=yes		; use the caller ID presentation or not
