--- a/etc/quectel.conf
+++ b/etc/quectel.conf
@@ -1,8 +1,7 @@
 [general]
-
-interval=15			; Number of seconds between trying to connect to devices
-smsdb=/var/lib/asterisk/smsdb
-csmsttl=600
+;interval=60		; Number of seconds between trying to connect to devices
+;smsdb=:memory:		; /var/lib/asterisk/smsdb
+;csmsttl=600
 
 ;------------------------------ JITTER BUFFER CONFIGURATION --------------------------
 ;jbenable = yes			; Enables the use of a jitterbuffer on the receiving side of a
