Configure SMS storage and delivery methods
New options:
- msg_service - select message service (see AT+CSMS command)
- msg_storage - SMS storage method (see AT+CPMS command),
- msg_direct - use CNT (direct SMS) or CNTI (indication only) notifications (see AT+CNMI command).

--- a/quectel.conf
+++ b/quectel.conf
@@ -69,6 +69,9 @@ initstate=start			; specified initial state of device, must be one of 'stop' 'st
 
 ;dtmf=no
 ;query_time=no
+;msg_service=-1		; -1,0,1
+;msg_storage=auto	; auto,sm,me,mt,sr
+;msg_direct=none	; none,on,off
 
 ; quectel required settings
 [quectel0]
