--- a/etc/quectel.conf
+++ b/etc/quectel.conf
@@ -66,6 +66,9 @@ initstate=start			; specified initial state of device, must be one of 'stop' 'st
 ;exten=70		; exten for start incoming calls, only in case of Subscriber Number not available!, also set to CALLERID(ndid)
 ;dtmf=no
 ;query_time=no
+;msg_service=-1		; -1,0,1
+;msg_storage=auto	; auto,sm,me,mt,sr
+;msg_direct=none	; none,on,off
 
 ; quectel required settings
 [quectel0]
