--- a/etc/quectel.conf
+++ b/etc/quectel.conf
@@ -43,8 +43,8 @@
 ;multiparty=no
 context=incoming-mobile		; context for incoming calls
 group=0				; calling group
-;rxgain=-1			; RX gain, range: 0–65535, -1 - use module setting
-;txgain=-1			; TX gain, range: 0–65535, -1 - use module setting
+;rxgain=-1			; RX gain, range: 0–65535 or 0%-100%, -1 - use module setting
+;txgain=-1			; TX gain, range: 0–65535 or 0%-100%, -1 - use module setting
 autodeletesms=yes		; auto delete incoming sms
 resetquectel=yes			; reset quectel during initialization with ATZ command
 usecallingpres=yes		; use the caller ID presentation or not
