Add CPack and Makefile templates for OpenWRT
1. Abilty to generate Debian package.

    lintian reports:

    E: asterisk-chan-quectel: no-changelog
    E: asterisk-chan-quectel: no-copyright-file

2. In order to generate Makefile for OpenWRT one must install `openwrt` component now:

    $ DSTDIR=$(pwd)/install cmake --install build --component openwrt

    There are two Makefile templates:

    * makefile-standalone.in - Makefile with with all required source files in `src` subdirectory.
    * makefile-git.in - Makefile only, source feteched from GitHub.

    By default makefile-standalone.in is used.
    Set OPENWRT_PACKAGE_STANDALONE variable to ON if you want to use makefile-git.in.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,83 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
 
+#
+#
+# CHAN_SOURCE_VERSION = git hash
+# CHAN_SOURCE_TS = timestamp of ${CHAN_SOURCE_VERSION}
+#
+# CHAN_VER_MAJOR CHAN_VER_MINOR CHAN_VER_PATCH CHAN_VER_TWEAK
+#
+# CHAN_STATUS
+#
+
+UNSET(OPENWRT_PACKAGE)
+UNSET(CHAN_SOURCE_VERSION)
+UNSET(CHAN_SOURCE_TS)
+UNSET(CHAN_STATUS)
+
+IF(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/.git)
+    SET(IS_GIT_REPO "TRUE")
+    FIND_PROGRAM(GIT_EXECUTABLE git REQUIRED)
+    EXECUTE_PROCESS(
+        COMMAND ${GIT_EXECUTABLE} describe --abbrev=6 --dirty --match "v*" --long
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+        OUTPUT_VARIABLE GIT_DESCRIBE
+        RESULT_VARIABLE GIT_ERROR_CODE
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
+    IF(NOT GIT_ERROR_CODE)
+        STRING(REGEX MATCH "^v([0-9]+)\\.([0-9]+)\\.([0-9]+)(-([0-9]+)(-.+))?$" PROGRAM_VERSION_MATCH ${GIT_DESCRIBE})
+        SET(CHAN_VER_MAJOR ${CMAKE_MATCH_1})
+        SET(CHAN_VER_MINOR ${CMAKE_MATCH_2})
+        SET(CHAN_VER_PATCH ${CMAKE_MATCH_3})
+        SET(CHAN_VER_TWEAK ${CMAKE_MATCH_5})
+        set(CHAN_STATUS ${CMAKE_MATCH_6})
+        SET(OPENWRT_PACKAGE 1)
+    ELSE()
+        UNSET(CHAN_STATUS)
+        MESSAGE(FATAL_ERROR "Git - unable to describe")
+    ENDIF()
+
+    EXECUTE_PROCESS(
+        COMMAND ${GIT_EXECUTABLE} log -n 1 "--pretty=format:%H;%ct"
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+        OUTPUT_VARIABLE GIT_LOG
+        RESULT_VARIABLE GIT_ERROR_CODE
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
+    IF(NOT GIT_ERROR_CODE)
+        LIST(GET GIT_LOG 0 CHAN_SOURCE_VERSION)
+        LIST(GET GIT_LOG 1 CHAN_SOURCE_TS)
+    ELSE()
+        MESSAGE(FATAL_ERROR "Git - unable to get timestamp of last commit")
+    ENDIF()    
+ELSE()
+    UNSET(IS_GIT_REPO)
+    IF(EXISTS ${CMAKE_SOURCE_DIR}/pkg-vars.cmake)
+        INCLUDE(${CMAKE_SOURCE_DIR}/pkg-vars.cmake)
+    ENDIF()
+ENDIF()
+
+IF(NOT(CHAN_VER_MAJOR AND CHAN_VER_MINOR AND CHAN_VER_PATCH AND CHAN_VER_TWEAK))
+    MESSAGE(WARNNG "Unknown channel version - using defaults")
+    SET(CHAN_SOURCE_VERSION "NOTFOUND")
+    SET(CHAN_SOURCE_TS 0)
+    STRING(TIMESTAMP CHAN_VER_MAJOR "%Y" UTC)
+    STRING(TIMESTAMP CHAN_VER_MINOR "%m" UTC)
+    STRING(TIMESTAMP CHAN_VER_PATCH "%d" UTC)
+    STRING(TIMESTAMP CHAN_VER_TWEAK "%H%M" UTC)
+    SET(CHAN_STATUS "-unversioned")
+ENDIF()
+
+MESSAGE(STATUS "Source version: ${CHAN_SOURCE_VERSION} [${CHAN_SOURCE_TS}]")
+MESSAGE(STATUS "Project version: ${CHAN_VER_MAJOR}.${CHAN_VER_MINOR}.${CHAN_VER_PATCH}-${CHAN_VER_TWEAK}${CHAN_STATUS}")
+
+# CMake
+
+IF(OPENWRT_PACKAGE)
+    OPTION(OPENWRT_PACKAGE_STANDALONE "OpenWRT standalone package" ON)
+ENDIF()
 SET(ASTERISK_VERSION_NUM 180000 CACHE STRING "Asterisk version")
 OPTION(ICONV_CONST "iconv() const declaration of input buffer" OFF)
 SET(ICONV_T iconv_t CACHE STRING "iconv type")
@@ -13,12 +90,14 @@ INCLUDE(CheckIncludeFile)
 INCLUDE(CheckIncludeFiles)
 INCLUDE(CheckSymbolExists)
 
-PROJECT(chan-quectel
-    VERSION 1.3.0.0
+PROJECT(asterisk-chan-quectel
+    VERSION ${CHAN_VER_MAJOR}.${CHAN_VER_MINOR}.${CHAN_VER_PATCH}.${CHAN_VER_TWEAK}
     HOMEPAGE_URL "http://github.com/RoEdAl/asterisk-chan-quectel"
-    DESCRIPTION "Channel driver for Quectel modems"
+    DESCRIPTION "Asterisk channel driver for Quectel modules"
     LANGUAGES C
 )
+
+SET(CMAKE_INSTALL_PREFIX "/usr")
 
 SET(CMAKE_REQUIRED_DEFINITIONS "-DAST_MODULE_SELF_SYM=__internal_chan_quectel_self")
 CHECK_INCLUDE_FILE(asterisk.h HAVE_ASTERISK_H)
@@ -79,11 +158,59 @@ CONFIGURE_FILE(config.h.in include/config.h)
 
 INCLUDE(GNUInstallDirs)
 
+IF(DEFINED OPENWRT_PACKAGE)
+    ADD_SUBDIRECTORY(openwrt)
+ENDIF()
 ADD_SUBDIRECTORY(src)
 
-# install configuration file
-INSTALL(FILES quectel.conf DESTINATION ${CMAKE_INSTALL_FULL_SYSCONFDIR}/asterisk)
+#
+# CPack
+# Based on: http://decovar.dev/blog/2021/09/23/cmake-cpack-package-deb-apt/
+#
 
+IF(NOT CPACK_PACKAGE_ARCHITECTURE)
+    FIND_PROGRAM(DPKG_EXECUTABLE dpkg)
+    IF(NOT DPKG_EXECUTABLE)
+        MESSAGE(WARNING "Can not find dpkg in your path, setting CPACK_PACKAGE_ARCHITECTURE to amd64.")
+        SET(CPACK_PACKAGE_ARCHITECTURE amd64)
+    ELSE()
+        EXECUTE_PROCESS(
+            COMMAND "${DPKG_EXECUTABLE}" --print-architecture
+            OUTPUT_VARIABLE CPACK_PACKAGE_ARCHITECTURE
+            OUTPUT_STRIP_TRAILING_WHITESPACE
+        )
+    ENDIF()
+ENDIF()
 
+SET(CPACK_PACKAGE_DIRECTORY ${PROJECT_BINARY_DIR}/package)
+SET(CPACK_PACKAGE_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}-${PROJECT_VERSION_TWEAK}${CHAN_STATUS}")
+SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}_${PROJECT_VERSION_TWEAK}${CHAN_STATUS}_${CPACK_PACKAGE_ARCHITECTURE}")
+SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${CMAKE_PROJECT_DESCRIPTION}")
+SET(CPACK_PACKAGE_DESCRIPTION "Asterisk channel driver for Quectel and SimCOM modules.")
+SET(CPACK_PACKAGE_CONTACT "roed@onet.eu")
+SET(CPACK_SET_DESTDIR ON)
+SET(CPACK_STRIP_FILES ON)
+SET(CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS
+    OWNER_READ OWNER_WRITE OWNER_EXECUTE
+    GROUP_READ GROUP_EXECUTE
+    WORLD_READ WORLD_EXECUTE
+)
 
+SET(CPACK_GENERATOR "TGZ;DEB")
+SET(CPACK_DEBIAN_FILE_NAME "${CMAKE_PROJECT_NAME}_${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}_${PROJECT_VERSION_TWEAK}${CHAN_STATUS}_${CPACK_PACKAGE_ARCHITECTURE}.deb")
+SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Edmunt Pienkowsky <${CPACK_PACKAGE_CONTACT}>")
+SET(CPACK_DEBIAN_PACKAGE_DEPENDS "alsa-lib, libsqlite3, asterisk")
+SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
+SET(CPACK_DEBIAN_PACKAGE_SECTION comm)
+SET(CPACK_DEBIAN_PACKAGE_PRIORITY optional)
+SET(CPACK_DEBIAN_PACKAGE_RECOMMENDS "usb-modeswitch")
+SET(CPACK_DEBIAN_PACKAGE_ENHANCES "asterisk")
 
+FILE(COPY cpack/deb DESTINATION cpack FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
+SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA ${PROJECT_BINARY_DIR}/cpack/deb/conffiles)
+
+SET(CPACK_SOURCE_GENERATOR "TGZ")
+SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}_${PROJECT_VERSION_TWEAK}${CHAN_STATUS}_src")
+SET(CPACK_SOURCE_IGNORE_FILES "/build/;/install/;/test/;/tools/;/\.vscode/;/\.git/;/\.gitignore;/\.gitattributes")
+
+INCLUDE(CPack)
