--- a/config.h.in
+++ b/config.h.in
@@ -6,10 +6,10 @@
 //
 
 /* Define to the version of this package */
-#define MODULE_VERSION "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@"
+#define MODULE_VERSION "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@"
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@"
+#define PACKAGE_VERSION "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@"
 
 /* Define to the home page for this package */
 #define MODULE_URL "@PROJECT_HOMEPAGE_URL@"
@@ -27,7 +27,7 @@
 #cmakedefine ASTERISK_VERSION_NUM @ASTERISK_VERSION_NUM@
 
 /* Revision of package */
-#define PACKAGE_REVISION "@PROJECT_VERSION_PATCH@.@PROJECT_VERSION_TWEAK@"
+#define PACKAGE_REVISION "@PROJECT_VERSION_TWEAK@@CHAN_STATUS@"
 
 /* Name of asterisk module */
 #cmakedefine AST_MODULE "@AST_MODULE@"
