--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,8 +62,8 @@ ELSE()
     ENDIF()
 ENDIF()
 
-IF(NOT(CHAN_VER_MAJOR AND CHAN_VER_MINOR AND CHAN_VER_PATCH AND CHAN_VER_TWEAK))
-    MESSAGE(WARNNG "Unknown channel version - using defaults")
+IF(NOT(DEFINED CHAN_VER_MAJOR AND DEFINED CHAN_VER_MINOR AND DEFINED CHAN_VER_PATCH AND DEFINED CHAN_VER_TWEAK))
+    MESSAGE(WARNING "Unknown project version - using defaults based on current timestamp")
     SET(CHAN_SOURCE_VERSION "NOTFOUND")
     SET(CHAN_SOURCE_TS 0)
     STRING(TIMESTAMP CHAN_VER_MAJOR "%Y" UTC)
