CMake: Add presets file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,28 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
 
+FUNCTION(SetProjectVersion cmajor cminor cpatch ctweak cstatus)
+    MATH(EXPR MMAJOR "${cmajor}")
+    MATH(EXPR MMINOR "${cminor}")
+    MATH(EXPR MPATCH "${cpatch}")
+    MATH(EXPR MTWEAK "${ctweak}")
+    IF(${cstatus} MATCHES "dirty$")
+        SET(IS_DIRTY 1)
+    ELSE()
+        UNSET(IS_DIRTY)
+    ENDIF()
+
+    IF(${MTWEAK} LESS_EQUAL 0 AND NOT IS_DIRTY)
+        # short form
+        SET(CHAN_VER_STR "${MMAJOR}.${MMINOR}.${MPATCH}" PARENT_SCOPE)
+        SET(CHAN_VER_FSTR "${MMAJOR}.${MMINOR}.${MPATCH}" PARENT_SCOPE)
+    ELSE()
+        # long form
+        SET(CHAN_VER_STR "${MMAJOR}.${MMINOR}.${MPATCH}-${MTWEAK}${cstatus}" PARENT_SCOPE)
+        SET(CHAN_VER_FSTR "${MMAJOR}.${MMINOR}.${MPATCH}_${MTWEAK}${cstatus}" PARENT_SCOPE)
+    ENDIF()
+ENDFUNCTION()
+
 #
 #
 # CHAN_SOURCE_VERSION = git hash
@@ -73,8 +95,9 @@ IF(NOT(DEFINED CHAN_VER_MAJOR AND DEFINED CHAN_VER_MINOR AND DEFINED CHAN_VER_PA
     SET(CHAN_STATUS "-unversioned")
 ENDIF()
 
+SetProjectVersion(${CHAN_VER_MAJOR} ${CHAN_VER_MINOR} ${CHAN_VER_PATCH} ${CHAN_VER_TWEAK} ${CHAN_STATUS})
 MESSAGE(STATUS "Source version: ${CHAN_SOURCE_VERSION} [${CHAN_SOURCE_TS}]")
-MESSAGE(STATUS "Project version: ${CHAN_VER_MAJOR}.${CHAN_VER_MINOR}.${CHAN_VER_PATCH}-${CHAN_VER_TWEAK}${CHAN_STATUS}")
+MESSAGE(STATUS "Project version: ${CHAN_VER_STR}")
 
 # CMake
 
@@ -96,8 +119,6 @@ PROJECT(asterisk-chan-quectel
     DESCRIPTION "Asterisk channel driver for Quectel modules"
     LANGUAGES C
 )
-
-SET(CMAKE_INSTALL_PREFIX "/usr")
 
 SET(CMAKE_REQUIRED_DEFINITIONS "-DAST_MODULE_SELF_SYM=__internal_chan_quectel_self")
 CHECK_INCLUDE_FILE(asterisk.h HAVE_ASTERISK_H)
@@ -136,7 +157,6 @@ CHECK_INCLUDE_FILE(sys/types.h HAVE_SYS_TYPES_H)
 CHECK_INCLUDE_FILE(termios.h HAVE_TERMIOS_H)
 CHECK_INCLUDE_FILE(unistd.h HAVE_UNISTD_H)
 
-SET(THREADS_PREFER_PTHREAD_FLAG ON)
 FIND_PACKAGE(Threads REQUIRED)
 FIND_PACKAGE(ALSA REQUIRED)
 FIND_PACKAGE(SQLite3 REQUIRED)
@@ -168,7 +188,7 @@ ADD_SUBDIRECTORY(src)
 # Based on: http://decovar.dev/blog/2021/09/23/cmake-cpack-package-deb-apt/
 #
 
-IF(NOT CPACK_PACKAGE_ARCHITECTURE)
+IF(NOT DEFINED CPACK_PACKAGE_ARCHITECTURE)
     FIND_PROGRAM(DPKG_EXECUTABLE dpkg)
     IF(NOT DPKG_EXECUTABLE)
         MESSAGE(WARNING "Can not find dpkg in your path, setting CPACK_PACKAGE_ARCHITECTURE to amd64.")
@@ -182,25 +202,18 @@ IF(NOT CPACK_PACKAGE_ARCHITECTURE)
     ENDIF()
 ENDIF()
 
-SET(CPACK_PACKAGE_DIRECTORY ${PROJECT_BINARY_DIR}/package)
-SET(CPACK_PACKAGE_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}-${PROJECT_VERSION_TWEAK}${CHAN_STATUS}")
-SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}_${PROJECT_VERSION_TWEAK}${CHAN_STATUS}_${CPACK_PACKAGE_ARCHITECTURE}")
+SET(CPACK_PACKAGE_VERSION ${CHAN_VER_STR})
+SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_${CPACK_PACKAGE_ARCHITECTURE}")
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${CMAKE_PROJECT_DESCRIPTION}")
 SET(CPACK_PACKAGE_DESCRIPTION "Asterisk channel driver for Quectel and SimCOM modules.")
-SET(CPACK_PACKAGE_CONTACT "roed@onet.eu")
-SET(CPACK_SET_DESTDIR ON)
-SET(CPACK_STRIP_FILES ON)
-SET(CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS
-    OWNER_READ OWNER_WRITE OWNER_EXECUTE
-    GROUP_READ GROUP_EXECUTE
-    WORLD_READ WORLD_EXECUTE
-)
+IF(NOT DEFINED CPACK_PACKAGE_CONTACT)
+    SET(CPACK_PACKAGE_CONTACT "roed@onet.eu")
+ENDIF()
 
 SET(CPACK_GENERATOR "TGZ;DEB")
-SET(CPACK_DEBIAN_FILE_NAME "${CMAKE_PROJECT_NAME}_${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}_${PROJECT_VERSION_TWEAK}${CHAN_STATUS}_${CPACK_PACKAGE_ARCHITECTURE}.deb")
+SET(CPACK_DEBIAN_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_${CPACK_PACKAGE_ARCHITECTURE}.deb")
 SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Edmunt Pienkowsky <${CPACK_PACKAGE_CONTACT}>")
 SET(CPACK_DEBIAN_PACKAGE_DEPENDS "alsa-lib, libsqlite3, asterisk")
-SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 SET(CPACK_DEBIAN_PACKAGE_SECTION comm)
 SET(CPACK_DEBIAN_PACKAGE_PRIORITY optional)
 SET(CPACK_DEBIAN_PACKAGE_RECOMMENDS "usb-modeswitch")
@@ -210,7 +223,7 @@ FILE(COPY cpack/deb DESTINATION cpack FILE_PERMISSIONS OWNER_READ OWNER_WRITE GR
 SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA ${PROJECT_BINARY_DIR}/cpack/deb/conffiles)
 
 SET(CPACK_SOURCE_GENERATOR "TGZ")
-SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}_${PROJECT_VERSION_TWEAK}${CHAN_STATUS}_src")
-SET(CPACK_SOURCE_IGNORE_FILES "/build/;/install/;/test/;/tools/;/\.vscode/;/\.git/;/\.gitignore;/\.gitattributes")
+SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_src")
+SET(CPACK_SOURCE_IGNORE_FILES "/build/;/install/;/package/;/test/;/tools/;/\.vscode/;/\.git/;/\.gitignore;/\.gitattributes")
 
 INCLUDE(CPack)
