--- a/openwrt/pkg-vars.cmake.in
+++ b/openwrt/pkg-vars.cmake.in
@@ -9,7 +9,7 @@ SET(CHAN_SOURCE_TS @CHAN_SOURCE_TS@)
 
 SET(CHAN_VER_MAJOR "@CHAN_VER_MAJOR@")
 SET(CHAN_VER_MINOR "@CHAN_VER_MINOR@")
-SET(CHAN_VAR_PATCH "@CHAN_VER_PATCH@")
+SET(CHAN_VER_PATCH "@CHAN_VER_PATCH@")
 SET(CHAN_VER_TWEAK "@CHAN_VER_TWEAK@")
 
 SET(CHAN_STATUS "@CHAN_STATUS@")
