Restore SIM7600X-H module support
SimCOM SIM7600X-H module support is back!

--- a/etc/quectel.conf
+++ b/etc/quectel.conf
@@ -75,4 +75,5 @@ initstate=start			; specified initial state of device, must be one of 'stop' 'st
 audio=/dev/ttyUSB1			; tty port for Audio, set as ttyUSB4 for Simcom if no other dev present
 data=/dev/ttyUSB2			; tty port for AT commands; 		no default value
 ;uac=yes					; Uncomment line if using UAC mode
+;slin16=yes					; SLIN16 audio format
 ;alsadev=hw:Android			; Uncomment if using UAC, set device name or index as reqd
