--- a/uac/quectel.conf
+++ b/uac/quectel.conf
@@ -76,4 +76,5 @@ initstate=start			; specified initial state of device, must be one of 'stop' 'st
 [quectel0]
 data=/dev/ttyUSB2			; tty port for AT commands; 		no default value
 uac=yes						; Uncomment line if using UAC mode
+;slin16=yes					; SLIN16 audio format
 alsadev=hw:Android			; Uncomment if using UAC, set device name or index as reqd
