--- a/quectel.conf
+++ b/quectel.conf
@@ -78,6 +78,7 @@ initstate=start			; specified initial state of device, must be one of 'stop' 'st
 audio=/dev/ttyUSB1			; tty port for Audio, set as ttyUSB4 for Simcom if no other dev present
 data=/dev/ttyUSB2			; tty port for AT commands; 		no default value
 ;uac=yes					; Uncomment line if using UAC mode
+;slin16=yes					; SLIN16 audio format
 ;alsadev=hw:Android			; Uncomment if using UAC, set device name or index as reqd
 ;imsi=						; Fill in value, uncomment and comment out everything else - Not for UAC
 ;imei=						; Fill in value, uncomment and comment out everything else - Not for UAC
