Add dtmf_duration configuration option

--- a/etc/quectel.conf
+++ b/etc/quectel.conf
@@ -32,8 +32,12 @@ initstate=start				; specified initial state of device, must be one of 'stop' 's
 							; 'remove' same as 'disable=yes'
 
 ;exten=70					; exten for start incoming calls, only in case of Subscriber Number not available!, also set to CALLERID(ndid)
+
 ;dtmf=no
+;dtmf_duration=120
+
 ;query_time=no
+
 ;msg_service=-1				; -1,0,1
 ;msg_storage=auto			; auto,sm,me,mt,sr
 ;msg_direct=none			; none,on,off
