Update OpenWRT makefiles
Display information about required permissions
to be able to access audio device (ALSA).

--- a/openwrt/makefile-standalone.in
+++ b/openwrt/makefile-standalone.in
@@ -51,10 +51,13 @@ define Package/@PROJECT_NAME@/postinst
 if [ -z "$${IPKG_INSTROOT}" ]; then
   echo
   echo 'o-------------------------------------------------------------------o'
-  echo '| asterisk-chan-quectel note                                        |'
+  echo '| asterisk-chan-quectel notes                                       |'
   echo 'o-------------------------------------------------------------------o'
   echo '| Adding the "asterisk" user to the "dialout" group might be        |'
   echo '| required for Asterisk to be able to access the module.            |'
+  echo 'o-------------------------------------------------------------------o'
+  echo '| Adding the "asterisk" user to the "audio" group might be          |'
+  echo '| required for Asterisk to be able to access the audio device.      |'
   echo 'o-------------------------------------------------------------=^_^=-o'
   echo
 fi
