Debian package: add postinst script
Just display message about required permissions as OpenWRT package do.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,8 +219,11 @@ SET(CPACK_DEBIAN_PACKAGE_PRIORITY optional)
 SET(CPACK_DEBIAN_PACKAGE_RECOMMENDS "usb-modeswitch")
 SET(CPACK_DEBIAN_PACKAGE_ENHANCES "asterisk")
 
-FILE(COPY cpack/deb DESTINATION cpack FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
-SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA ${PROJECT_BINARY_DIR}/cpack/deb/conffiles)
+FILE(COPY cpack/deb DESTINATION cpack
+    FILE_PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ
+    PATTERN "postinst" PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
+)
+SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA ${PROJECT_BINARY_DIR}/cpack/deb/conffiles ${PROJECT_BINARY_DIR}/cpack/deb/postinst)
 
 SET(CPACK_SOURCE_GENERATOR "TGZ")
 SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_src")
