Use modern serial port locking methods
* Calling ioctl(fd, TIOCGEXCL, &locking_status) and ioctl(fd, TIOCEXCL).

    This will prevent non-root processes from opening the device (returning EBUSY),
    and give the ability to all processes to be informed that the device is already locked.

* Calling flock(fd, LOCK_EX | LOCK_NB).

    This gives the ability to be informed whether the device is already locked by looking at the return value.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,7 @@ IF(OPENWRT_PACKAGE)
 ENDIF()
 SET(ASTERISK_VERSION_NUM 180000 CACHE STRING "Asterisk version")
 OPTION(ICONV_CONST "iconv() const declaration of input buffer" OFF)
+OPTION(USE_SYSV_UUCP_LOCKS "Use SYSV-style UUCP device locks" OFF)
 SET(ICONV_T iconv_t CACHE STRING "iconv type")
 SET(AST_MODULE chan_quectel)
 
