Revert SMS reporting

--- a/etc/extensions.conf
+++ b/etc/extensions.conf
@@ -1,7 +1,17 @@
 ; this is chunks of Asterisk extensions.conf file for show some chan_quectel features
 [general]
 
+[incoming-report]
+exten => report,1,NoOp(SMS Report)
+same => n,GotoIf(${SMS_REPORT_SUCCESS}?reportsuccess:reportfail)
+same => n(reportsuccess),Verbose(2,[${QUECTELNAME}][${SMS_REPORT_TYPE}] ${CALLERID(num)} - ${SMS_REPORT} [${SMS_REPORT_PAYLOAD}])
+same => n,Goto(reportbye)
+same => n(reportfail),Verbose(1,[${QUECTELNAME}][${SMS_REPORT_TYPE}] ${CALLERID(num)} - ${SMS_REPORT} [${SMS_REPORT_PAYLOAD}])
+same => n,Goto(reportbye)
+same => n,Hangup
+
 [quectel-incoming]
+include => incoming-report
 ; example of ussd receive
 exten => ussd,1,Set(type=${USSD_TYPE})
 	; values from 0 till 5
