--- a/.github/actions/install-openwrt-sdk/action.yml
+++ b/.github/actions/install-openwrt-sdk/action.yml
@@ -1,16 +1,16 @@
 name: Download OpenWRT SDK
-description: Download and extract OpenWRT SDK for specific architecture
+description: Download, extract and prepare OpenWRT SDK for specific target (architecture)
 inputs:
   openwrt-version:
     required: true
     description: OpenWRT version
   arch:
     required: true
-    description: Target architecture
+    description: Target name
   eabi:
     required: false
     description: EABI
-    default: 0
+    default: false
 runs:
   using: composite
   steps:
@@ -20,26 +20,33 @@ runs:
       with:
         path: owrtsdk
         key: openwrt-sdk-${{ inputs.openwrt-version }}-${{ inputs.arch }}
-  
-    - name: Download OpenWRT SDK
-      id: download-owrt-sdk
+
+    - name: Prepare OpenWRT SDK directory
+      id: prepare-owrt-sdk-dir
       if: steps.cache-owrt-sdk-restore.outputs.cache-hit != 'true'
       shell: bash
+      run: mkdir owrtsdk
+
+    - name: Download OpenWRT SDK (eabi)
+      id: download-owrt-sdk-eabi
+      if: steps.cache-owrt-sdk-restore.outputs.cache-hit != 'true' && inputs.eabi == 'true'
+      shell: bash
+      working-directory: owrtsdk
+      run: ${{ github.action_path }}/download-owrt-sdk.sh ${{ inputs.arch }} ${{ inputs.openwrt-version }} openwrt-sdk-${{ inputs.openwrt-version }}-${{ inputs.arch }}_gcc-11.2.0_musl_eabi.Linux-x86_64
+
+    - name: Download OpenWRT SDK
+      id: download-owrt-sdk
+      if: steps.cache-owrt-sdk-restore.outputs.cache-hit != 'true' && inputs.eabi != 'true'
+      shell: bash
+      working-directory: owrtsdk
+      run: ${{ github.action_path }}/download-owrt-sdk.sh ${{ inputs.arch }} ${{ inputs.openwrt-version }} openwrt-sdk-${{ inputs.openwrt-version }}-${{ inputs.arch }}_gcc-11.2.0_musl.Linux-x86_64
+
+    - name: Prepare OpenWRT SDK
+      id: prepare-owrt-sdk
+      if: steps.cache-owrt-sdk-restore.outputs.cache-hit != 'true'
+      shell: bash
+      working-directory: owrtsdk/${{ inputs.arch }}
       run: |
-        mkdir owrtsdk
-        cd owrtsdk
-        sd=$(echo ${{ inputs.arch }}|cut -d '-' --output-delimiter '/' -f 1-2)
-        eabi="${{ inputs.eabi }}"
-        if [ "${eabi:-0}" -eq 1 ]; then
-          sdk=openwrt-sdk-${{ inputs.openwrt-version }}-${{ inputs.arch }}_gcc-11.2.0_musl_eabi.Linux-x86_64
-        else
-          sdk=openwrt-sdk-${{ inputs.openwrt-version }}-${{ inputs.arch }}_gcc-11.2.0_musl.Linux-x86_64
-        fi
-        wget -q https://downloads.openwrt.org/releases/${{ inputs.openwrt-version }}/targets/${sd}/${sdk}.tar.xz
-        tar -xf ${sdk}.tar.xz
-        rm ${sdk}.tar.xz
-        mv ${sdk} ${{ inputs.arch }}
-        cd ${{ inputs.arch }}
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
