--- a/.github/actions/install-required-packages/action.yml
+++ b/.github/actions/install-required-packages/action.yml
@@ -7,16 +7,14 @@ runs:
       uses: awalsh128/cache-apt-pkgs-action@latest
       with:
         packages: |
-          git wget
-          build-essential 
+          git curl wget
           bison flex
-          curl libncurses5-dev libssl-dev libxml2-dev libnewt-dev
-          libsqlite3-dev pkg-config automake libtool autoconf unixodbc-dev uuid-dev
+          build-essential pkg-config automake libtool libtool-bin autoconf
+          libncurses5-dev libssl-dev libxml2-dev libnewt-dev libsqlite3-dev
+          unixodbc-dev uuid-dev libsystemd-dev
           libasound2-dev libogg-dev libvorbis-dev libicu-dev libcurl4-openssl-dev libical-dev libneon27-dev libsrtp2-dev
-          libspandsp-dev libtool-bin
-          libedit-dev libjansson-dev libspeexdsp-dev libopus-dev libopusfile-dev
-          libsystemd-dev
-      
+          libspandsp-dev libedit-dev libjansson-dev libspeexdsp-dev libopus-dev libopusfile-dev
+  
     - name: Git configuration
       shell: bash
       run: git config --global advice.detachedHead false
