Fix DEB package
Fix dependencies:

alsa-lib => libasound2,
libsqlite3 => libsqlite3-0.

Fix conffile.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,7 +214,7 @@ ENDIF()
 SET(CPACK_GENERATOR "TGZ;DEB")
 SET(CPACK_DEBIAN_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_${CPACK_PACKAGE_ARCHITECTURE}.deb")
 SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Edmunt Pienkowsky <${CPACK_PACKAGE_CONTACT}>")
-SET(CPACK_DEBIAN_PACKAGE_DEPENDS "alsa-lib, libsqlite3, asterisk")
+SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libasound2, libsqlite3-0, asterisk")
 SET(CPACK_DEBIAN_PACKAGE_SECTION comm)
 SET(CPACK_DEBIAN_PACKAGE_PRIORITY optional)
 SET(CPACK_DEBIAN_PACKAGE_RECOMMENDS "usb-modeswitch")
