--- a/.github/actions/install-required-packages/action.yml
+++ b/.github/actions/install-required-packages/action.yml
@@ -7,13 +7,9 @@ runs:
       uses: awalsh128/cache-apt-pkgs-action@latest
       with:
         packages: |
-          git curl wget
-          bison flex
-          build-essential pkg-config automake libtool libtool-bin autoconf
-          libncurses5-dev libssl-dev libxml2-dev libnewt-dev libsqlite3-dev
-          unixodbc-dev uuid-dev libsystemd-dev
-          libasound2-dev libogg-dev libvorbis-dev libicu-dev libcurl4-openssl-dev libical-dev libneon27-dev libsrtp2-dev
-          libspandsp-dev libedit-dev libjansson-dev libspeexdsp-dev libopus-dev libopusfile-dev
+          git wget
+          build-essential
+          libasound2-dev libsqlite3-dev asterisk-dev
   
     - name: Git configuration
       shell: bash
