--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ on:
 env:
   BUILD_TYPE: Release
   OWRTVER: 22.03.5
-  ASTVER: 18
+  UBUNTU_DISTRO: ubuntu22.04
 
 jobs:
   pre-build:
@@ -28,9 +28,6 @@ jobs:
         sparse-checkout: .github/actions
         sparse-checkout-cone-mode: false
     - uses: ./.github/actions/install-required-packages
-    - uses: ./.github/actions/install-asterisk-headers
-      with:
-        asterisk-version: ${{ env.ASTVER }}
 
   build-deb-pkg:
     needs: pre-build
@@ -44,9 +41,6 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: sudo apt-get install -qq lintian
-    - uses: ./.github/actions/install-asterisk-headers
-      with:
-        asterisk-version: ${{ env.ASTVER }}
    
     - name: Configure project
       run: cmake -P make-build-dir.cmake
@@ -97,6 +91,75 @@ jobs:
           sudo gdebi --non-interactive $p
         done
 
+  build-deb-pkg-arch:
+    needs: pre-build
+    strategy:
+      matrix:
+        arch: [armv7, aarch64]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - uses: ./.github/actions/install-required-packages
+    - uses: uraimo/run-on-arch-action@v2
+      name: Build package (${{ matrix.arch }})
+      with:
+        arch: ${{ matrix.arch }}
+        distro: ${{ env.UBUNTU_DISTRO }}
+        githubToken: ${{ github.token }}
+        install: |
+          apt-get update -qq -y
+          apt-get install -qq -y git cmake \
+            build-essential \
+            libsqlite3-dev libasound2-dev asterisk-dev
+          git config --global --add safe.directory /home/runner/work/asterisk-chan-quectel/asterisk-chan-quectel
+        env: |
+          DEBIAN_FRONTEND: noninteractive
+        run: |
+          cmake -P make-build-dir.cmake
+          cmake -P make-package.cmake
+    - name: Install lintian
+      env:
+        DEBIAN_FRONTEND: noninteractive
+      run: sudo apt-get install -qq -y lintian
+    - name: Check package
+      run: lintian --verbose --info package/asterisk-chan-quectel_*.deb
+    - name: Archive DEB
+      uses: actions/upload-artifact@v3
+      with:
+        name: pkg-deb-${{ matrix.arch }}
+        path: |
+          package/asterisk-chan-quectel_*.deb
+          package/asterisk-chan-quectel_*.deb.sha256
+        retention-days: 1
+        if-no-files-found: error
+    - name: Archive TAR.GZ
+      uses: actions/upload-artifact@v3
+      with:
+        name: pkg-tar-gz-${{ matrix.arch }}
+        path: |
+          package/asterisk-chan-quectel_*.tar.gz
+          package/asterisk-chan-quectel_*.tar.gz.sha256
+        retention-days: 1
+        if-no-files-found: error
+    - uses: uraimo/run-on-arch-action@v2
+      name: Try to instal package (${{ matrix.arch }})
+      with:
+        arch: ${{ matrix.arch }}
+        distro: ${{ env.UBUNTU_DISTRO }}
+        setup: |
+          mkdir -p "${PWD}/package"
+        dockerRunArgs: |
+          --volume "${PWD}/package:/package"
+        install: |
+          apt-get update -qq -y
+          apt-get install -qq -y gdebi-core
+        env: |
+          DEBIAN_FRONTEND: noninteractive
+        run: |
+          gdebi --non-interactive package/asterisk-chan-quectel_*.deb || echo "::error::Could not install package ${{ matrix.arch }}"
+  
   build-openwrt-pkg:
     runs-on: ubuntu-latest
     needs: pre-build
@@ -120,9 +183,6 @@ jobs:
           .github/actions
         sparse-checkout-cone-mode: false
     - uses: ./.github/actions/install-required-packages
-    - uses: ./.github/actions/install-asterisk-headers
-      with:
-        asterisk-version: ${{ env.ASTVER }}
     - uses: ./.github/actions/install-openwrt-sdk
       with:
         openwrt-version: ${{ env.OWRTVER }}
@@ -176,7 +236,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    needs: [build-openwrt-pkg, deb-pkg-try-install]
+    needs: [build-openwrt-pkg, deb-pkg-try-install, build-deb-pkg-arch]
     if: startsWith(github.ref, 'refs/tags/')
     steps:
     - name: Download all workflow run artifacts
